--- a/style.css
+++ b/style.css
@@ -130,6 +130,26 @@ input[type='number'] {
   border-right: 5px solid #c0392b;
 }
 
+@media only screen and (max-width: 768px) {
+  .delete-btn {
+  cursor: pointer;
+  background-color: #e74c3c;
+  border: 0;
+  color: #fff;
+  font-size: 20px;
+  line-height: 20px;
+  padding: 2px 5px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(-100%, -50%);
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
+
+}
+
+@media only screen and (min-width: 768px) {
 .delete-btn {
   cursor: pointer;
   background-color: #e74c3c;
@@ -146,6 +166,8 @@ input[type='number'] {
   transition: opacity 0.3s ease;
 }
 
-.list li:hover .delete-btn {
+  .list li:hover .delete-btn {
   opacity: 1;
+}
+
 }
